<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context="com.example.planner.views.CreateTaskActivity">

    <EditText
        android:id="@+id/editText_tile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/title_hint"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/roboto"
        android:hint="@string/newText"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_deadline"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_marginStart="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:text="@string/tv_date"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="end"
            android:text="@string/tv_time"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tv_priority"
        android:textColor="#000000"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/radio_group_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/radioButton_red"
            style="@style/MyRadioButtonStyleRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radioButton_yellow"
            style="@style/MyRadioButtonStyleYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp" />

        <RadioButton
            android:id="@+id/radioButton_green"
            style="@style/MyRadioButtonStyleGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:checked="true" />

    </RadioGroup>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/roboto"
        android:text="@string/button_create"
        android:textColor="#ffffff"
        android:textSize="14sp" />
</LinearLayout>
