<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/rv_tasks_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="0.5"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto"
                    android:maxLines="1"
                    android:text="@string/test_title"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rv_tasks_deadline"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:fontFamily="@font/roboto"
                    android:gravity="right|center_vertical"
                    android:maxLines="1"
                    android:text="@string/test_date"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/rv_tasks_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/roboto"
                android:maxLines="4"
                android:text="@string/test_content"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/rv_priority"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:src="@color/colorAccent" />

    </LinearLayout>

</androidx.cardview.widget.CardView>